--- a/gen_features.ipynb
+++ b/gen_features.ipynb
@@ -607,7 +607,7 @@
     "data = pd.concat([train, test], ignore_index=True)\n",
     "data = kfold_mean(data[~data['label'].isna()], data[data['label'].isna()],'label',feature_list)\n",
     "\n",
-    "data.head(20)"
+    "data.head()"
    ]
   },
   {
@@ -1217,7 +1217,7 @@
     "            data['{}_{}_multi'.format(f1, f2)] = data[f1].values * data[f2].values\n",
     "            data['{}_{}_add'.format(f1, f2)] = data[f1].values + data[f2].values\n",
     "            data['{}_{}_diff'.format(f1, f2)] = data[f1].values - data[f2].values\n",
-    "data.head(20)"
+    "data.head()"
    ]
   },
   {
