--- a/gen_features.ipynb
+++ b/gen_features.ipynb
@@ -1646,6 +1646,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#构建序列特征，例如构建每个用户的登录行为序列\n",
+    "#构建序列\n",
+    "launch_grp = pd.DataFrame()\n",
+    "\n",
+    "user_id = []\n",
+    "launch_date_str = []\n",
+    "for i in launch.groupby('user_id'):\n",
+    "    launch_date = []\n",
+    "    user_id.append(i[0])\n",
+    "    for j in i[1]['date']:\n",
+    "        launch_date.append(j)\n",
+    "    launch_date_str.append(str(launch_date))\n",
+    "launch_grp['user_id'] = list(user_id)\n",
+    "launch_grp['launch_date_str'] = list(launch_date_str)\n",
+    "launch_grp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#想象力特征"
    ]
   }
