--- a/gen_features.ipynb
+++ b/gen_features.ipynb
@@ -1647,7 +1647,6 @@
    "outputs": [],
    "source": [
     "#构建序列特征，例如构建每个用户的登录行为序列\n",
-    "#构建序列\n",
     "launch_grp = pd.DataFrame()\n",
     "\n",
     "user_id = []\n",
@@ -1661,6 +1660,41 @@
     "launch_grp['user_id'] = list(user_id)\n",
     "launch_grp['launch_date_str'] = list(launch_date_str)\n",
     "launch_grp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#对上述序列或文本特征进行w2v，构建embedding特征\n",
+    "data['tagid'] = data['tagid'].apply(lambda x: eval(x))\n",
+    "sentences = data['tagid'].values.tolist()\n",
+    "for i in range(len(sentences)):\n",
+    "    sentences[i] = [str(x) for x in sentences[i]]   #将每个tagid转化成str格式\n",
+    "\n",
+    "emb_size = 32\n",
+    "#model = Word2Vec(sentences,vector_size=emb_size, window=6, min_count=5, sg=0, hs=0, seed=1,epochs=5)\n",
+    "model = Word2Vec.load('./w2vmodel/w2vmodel.model')\n",
+    "emb_matrix = []\n",
+    "for seq in sentences:\n",
+    "    vec = []\n",
+    "    for w in seq:\n",
+    "#         if w in model.wv.vocab:\n",
+    "#             vec.append(model.wv[w])\n",
+    "        try:\n",
+    "            vec.append(model.wv[w])\n",
+    "        except KeyError:\n",
+    "                continue\n",
+    "                \n",
+    "    if len(vec) > 0:\n",
+    "        emb_matrix.append(np.mean(vec, axis=0))\n",
+    "    else:\n",
+    "        emb_matrix.append([0] * emb_size)\n",
+    "emb_matrix = np.array(emb_matrix)\n",
+    "for i in range(emb_size):\n",
+    "    data['tag_emb_{}'.format(i)] = emb_matrix[:, i]"
    ]
   },
   {
