--- a/get_feature_importance.ipynb
+++ b/get_feature_importance.ipynb
@@ -1757,7 +1757,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#网格调参\n",
+    "#网格调参,缺点慢\n",
     "lg = lgb.LGBMClassifier(silent=False)\n",
     "param_dist = {\"max_depth\": [4,5, 7],\n",
     "              \"learning_rate\" : [0.01,0.05,0.1],\n",
@@ -1768,6 +1768,39 @@
     "grid_search = GridSearchCV(lg, n_jobs=-1, param_grid=param_dist, cv = 5, scoring=\"roc_auc\", verbose=5)\n",
     "grid_search.fit(train,y_train)\n",
     "grid_search.best_estimator_, grid_search.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#随机搜索 缺点：不一定得到最优组合\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "lg = lgb.LGBMClassifier(silent=False)\n",
+    "\n",
+    "param_dist = {\"max_depth\": [4,5, 7],\n",
+    "              \"learning_rate\" : [0.01,0.05,0.1],\n",
+    "              \"num_leaves\": [300,900,1200],\n",
+    "              \"n_estimators\": [50, 100, 150]\n",
+    "             }\n",
+    "\n",
+    "rand_ser = RandomizedSearchCV(lg,grid_param,n_iter=10)\n",
+    "rand_ser.fit(X_train,y_train)\n",
+    "\n",
+    "#best parameter combination\n",
+    "rand_ser.best_params_\n",
+    "\n",
+    "#score achieved with best parameter combination\n",
+    "rand_ser.best_score_\n",
+    "\n",
+    "#all combinations of hyperparameters\n",
+    "rand_ser.cv_results_['params']\n",
+    "\n",
+    "#average scores of cross-validation\n",
+    "rand_ser.cv_results_['mean_test_score']"
    ]
   },
   {
