--- a/get_feature_importance.ipynb
+++ b/get_feature_importance.ipynb
@@ -35,6 +35,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 数据处理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 转化数据类型，减小内存"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#来自 <https://tianchi.aliyun.com/mas-notebook/preview/51950/529bb560-8f2c-11e9-8c20-8f36053a0c7c.ipynb/-1?lang=> \n",
+    "def reduce_mem_usage(df, verbose=True):\n",
+    "    numerics = ['int16', 'int32', 'int64', 'float16', 'float32', 'float64']\n",
+    "    start_mem = df.memory_usage().sum() / 1024**2\n",
+    "    for col in tqdm(df.columns):\n",
+    "        col_type = df[col].dtypes\n",
+    "        if col_type in numerics:\n",
+    "            c_min = df[col].min()\n",
+    "            c_max = df[col].max()\n",
+    "            if str(col_type)[:3] == 'int':\n",
+    "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
+    "                    df[col] = df[col].astype(np.int8)\n",
+    "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
+    "                    df[col] = df[col].astype(np.int16)\n",
+    "                elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
+    "                    df[col] = df[col].astype(np.int32)\n",
+    "                elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
+    "                    df[col] = df[col].astype(np.int64)\n",
+    "            else:\n",
+    "                if c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
+    "                    df[col] = df[col].astype(np.float16)\n",
+    "                elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
+    "                    df[col] = df[col].astype(np.float32)\n",
+    "                else:\n",
+    "                    df[col] = df[col].astype(np.float64)\n",
+    "    end_mem = df.memory_usage().sum() / 1024**2\n",
+    "    if verbose: print('Mem. usage decreased to {:5.2f} Mb ({:.1f}% reduction)'.format(end_mem, 100 * (start_mem - end_mem) / start_mem))\n",
+    "    return df\n",
+    "\n",
+    "data = reduce_mem_usage(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### seaborn画分布图"
    ]
   },
@@ -1573,6 +1625,13 @@
     "print('selectedFeatureIndex:'+str(selector.get_support(True)))\n",
     "print('selectedFeatureNameis:'+str(train.columns[selector.get_support(True)]))\n",
     "print('excludedFeatureNameis:'+str(train.columns[~ selector.get_support()]))  # ‘~’取反 即筛除的特征"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 模型训练"
    ]
   },
   {
